# web_service

./: .gitignore  AGENTS.md  CLOUDFLARE-SETUP.md  Claude.md  DeploymentPlan.md  DesignOptions.md  DevGuide.md  DevGuide_Viral.md  Dockerfile  PRD.md  PRD_Viral.md  README-Docker-Integrated.md  README.md  Tasks.md  Tickets.md  couple.md  docker-compose.yml  review_todo.md  test_mbti.py
calculate-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
calculate-service/app/: __init__.py  category_service.py  config.py  instrumentation.py  invite_service.py  main.py  problem_bank.py  repositories.py  status.py
calculate-service/app/data/: problems.json
calculate-service/app/routers/: __init__.py  health.py  invites.py  pages.py  problems.py
calculate-service/app/templates/: base.html  index.html  problems.html  share.html
calculate-service/tests/: test_api.py  test_invites.py  test_pages.py
docs/: agent_runbook.md  api_style.md  calculate_service_overview.md  frontend_style.md  main_service_static_issue.md  mbti_friend_followup.md  participant_api_summary.md  senior_brief.md  status_report.md  testing.md  viral_feedback_todo.md
main-service/: Dockerfile  requirements.txt
math-app/: README-Docker.md  README.md  docker-compose.yml
mbti-arcade/: AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  init_db.py  mbti.db  nixpacks.toml  perception_gap.db  pytest.ini  requirements.txt  run.bat  run.ps1  test_mbti.py
nginx/: nginx.conf
testing_utils/: __init__.py  sync_client.py
(+183 files in other folders)
