[project]
name = "calculate-service"
version = "1.0.0"
description = "초등 수학 문제 제공 FastAPI 서비스"
authors = [{ name = "360Me" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "jinja2==3.1.2",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "python-dotenv==1.0.0",
    "pydantic-settings==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "httpx==0.25.2",
    "anyio==3.7.1",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
